@@ -10,6 +10,7 @@
 """
 
 
+#: list of lorem ipsum words used by the lipsum() helper function
 LOREM_IPSUM_WORDS = u'''\
 a ac accumsan ad adipiscing aenean aliquam aliquet amet ante aptent arcu at
 auctor augue bibendum blandit class commodo condimentum congue consectetuer
