@@ -75,6 +75,33 @@ try:
 except ImportError:
     has_extended_debugger = False
 
+# group by support
+try:
+    from itertools import groupby
+except ImportError:
+    class groupby(object):
+
+        def __init__(self, iterable, key=lambda x: x):
+            self.keyfunc = key
+            self.it = iter(iterable)
+            self.tgtkey = self.currkey = self.currvalue = xrange(0)
+
+        def __iter__(self):
+            return self
+
+        def next(self):
+            while self.currkey == self.tgtkey:
+                self.currvalue = self.it.next()
+                self.currkey = self.keyfunc(self.currvalue)
+            self.tgtkey = self.currkey
+            return (self.currkey, self._grouper(self.tgtkey))
+
+        def _grouper(self, tgtkey):
+            while self.currkey == tgtkey:
+                yield self.currvalue
+                self.currvalue = self.it.next()
+                self.currkey = self.keyfunc(self.currvalue)
+
 #: function types
 callable_types = (FunctionType, MethodType)
 
