@@ -62,6 +62,10 @@ ROUND = '''{{ 2.7|round }}|{{ 2.1|round }}|\
 XMLATTR = '''{{ {'foo': 42, 'bar': 23, 'fish': none,
 'spam': missing, 'blub:blub': '<?>'}|xmlattr }}'''
 SORT = '''{{ [2, 3, 1]|sort }}|{{ [2, 3, 1]|sort(true) }}'''
+GROUPBY = '''{{ [{'foo': 1, 'bar': 2},
+                 {'foo': 2, 'bar': 3},
+                 {'foo': 1, 'bar': 1},
+                 {'foo': 3, 'bar': 4}]|groupby('foo') }}'''
 
 
 
@@ -282,3 +286,12 @@ def test_xmlattr(env):
 def test_sort(env):
     tmpl = env.from_string(SORT)
     assert tmpl.render() == '[1, 2, 3]|[3, 2, 1]'
+
+
+def test_groupby(env):
+    tmpl = env.from_string(GROUPBY)
+    assert tmpl.render() == (
+        "[{'list': [{'foo': 1, 'bar': 2}, {'foo': 1, 'bar': 1}], "
+        "'grouper': 1}, {'list': [{'foo': 2, 'bar': 3}], 'grouper': 2}, "
+        "{'list': [{'foo': 3, 'bar': 4}], 'grouper': 3}]"
+    )
